all project to compatible of jdk 6, on compile level and class.